MQ添加确认机制

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -10,5 +10,8 @@ spring:
         port: 5672
         username: guest
         password: guest
-
-
+        publisher-confirms: true
+        publisherReturns: true
+        listener:
+          simple:
+            acknowledge-mode: manual
