--- a/src/main/resources/config/bootstrap.yml
+++ b/src/main/resources/config/bootstrap.yml
@@ -27,12 +27,12 @@ mq:
     queueName: test
     routingKey: yuanwj.#
 
-#eureka:
-#    instance:
-#        hostname: localhost
-#        metadataMap:
-#            instanceId: ${spring.application.name}:${random.value}
-#    client:
-#        service-url:
-##            defaultZone: http://192.168.50.150:8081/eureka,http://192.168.50.150:8082/eureka
-#            defaultZone: http://localhost:8081/eureka,http://localhost:8082/eureka
+eureka:
+    instance:
+        hostname: localhost
+        metadataMap:
+            instanceId: ${spring.application.name}:${random.value}
+    client:
+        service-url:
+#            defaultZone: http://192.168.50.150:8081/eureka,http://192.168.50.150:8082/eureka
+            defaultZone: http://localhost:8081/eureka,http://localhost:8082/eureka
